Integrate Firebase Auth

--- a/collection-app/build.gradle
+++ b/collection-app/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("com.h2database:h2")
+    implementation("com.google.firebase:firebase-admin:6.8.1")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude(group: "org.junit.vintage", module: "junit-vintage-engine")
     }
