--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id("org.springframework.boot") version "2.2.0.RC1" apply false
+	id("org.springframework.boot") version "2.2.0.RELEASE" apply false
 	id("io.spring.dependency-management") version "1.0.8.RELEASE" apply false
 	id("org.jetbrains.kotlin.jvm") version "1.3.50" apply false
 	id("org.jetbrains.kotlin.kapt") version "1.3.50" apply false
