--- a/spring-security-firebase-auth/build.gradle
+++ b/spring-security-firebase-auth/build.gradle
@@ -1,15 +1,11 @@
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-webflux")
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
-    implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-    implementation("com.h2database:h2")
-    implementation(project(":spring-security-firebase-auth"))
+    api("org.springframework.security:spring-security-oauth2-jose")
+    api("com.google.firebase:firebase-admin:6.8.1")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude(group: "org.junit.vintage", module: "junit-vintage-engine")
     }
-    kapt("org.hibernate:hibernate-jpamodelgen")
 }
