--- a/docker/maxwell/config.properties
+++ b/docker/maxwell/config.properties
@@ -1,6 +1,7 @@
 user=root
 password=pw
 host=mysql
+jdbc_options=zeroDateTimeBehavior=convertToNull&connectTimeout=5000&useUnicode=true&characterEncoding=utf8
 gtid_mode=true
 output_primary_keys=true
 output_gtid_position=true
