Maxwell stream consumer prototype

--- a/collection-app/src/main/resources/application.properties
+++ b/collection-app/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=18001
+spring.datasource.url=jdbc:mysql://localhost/matcha_collection?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=pw
+spring.jpa.hibernate.ddl-auto=update
