--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,5 @@ rootProject.name = 'matcha'
 include(':spring-security-firebase-auth')
 include(':collection-app')
 include(':media-app')
+include(':review-app')
 include(':gateway-app')
