--- a/gateway-app/build.gradle
+++ b/gateway-app/build.gradle
@@ -1,8 +1,13 @@
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-webflux")
+    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+    implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
+    implementation(project(":spring-security-firebase-auth"))
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude(group: "org.junit.vintage", module: "junit-vintage-engine")
     }
