--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@blueprintjs/core": "^3.19.1",
     "@blueprintjs/select": "^3.11.1",
+    "blurhash": "^1.1.3",
     "firebase": "^7.1.0",
     "firebaseui": "^4.2.0",
     "react": "^16.10.2",
+    "react-blurhash": "^0.1.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
