--- a/docker/maxwell/config.properties
+++ b/docker/maxwell/config.properties
@@ -6,6 +6,7 @@ gtid_mode=true
 output_primary_keys=true
 output_gtid_position=true
 
-producer=redis
-redis_host=redis
-redis_type=xadd
+producer=kafka
+kafka.acks=all
+kafka.retries=5
+kafka.bootstrap.servers=broker:29092
