--- a/review-app/build.gradle
+++ b/review-app/build.gradle
@@ -1,10 +1,10 @@
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-webflux")
-    implementation("org.springframework.boot:spring-boot-starter-data-redis-reactive")
     implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+    implementation("org.springframework.cloud:spring-cloud-stream-binder-kafka")
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude(group: "org.junit.vintage", module: "junit-vintage-engine")
     }
