--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ subprojects {
 
 	dependencyManagement {
 		imports {
-			mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.RC2"
+			mavenBom "org.springframework.cloud:spring-cloud-dependencies:Hoxton.RELEASE"
 		}
 	}
 
