--- a/review-app/src/main/resources/application.properties
+++ b/review-app/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=18003
 spring.cloud.stream.bindings.input.destination=maxwell
 spring.cloud.stream.bindings.input.group=review
 spring.cloud.stream.kafka.bindings.input.consumer.autoCommitOffset=false
+spring.zipkin.baseUrl=http://127.0.0.1:9411/
