--- a/user-profile-app/src/main/resources/application.properties
+++ b/user-profile-app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=18004
-spring.datasource.url=jdbc:mysql://localhost/matcha_user_profile?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost/matcha_user_profile?useUnicode=true&characterEncoding=utf8?useUnicode=true&characterEncoding=utf8&queryInterceptors=brave.mysql8.TracingQueryInterceptor&exceptionInterceptors=brave.mysql8.TracingExceptionInterceptor
 spring.datasource.username=root
 spring.datasource.password=pw
 spring.jpa.hibernate.ddl-auto=update
+spring.zipkin.baseUrl=http://127.0.0.1:9411/
